k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  ports:
    - port: 4000     
      targetPort: 4000 
  selector:
    app: client
