k8s/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: api/v1/
            pathType: "Prefix"
            backend:
              service:
                name: client-service
                port:
                  number: 4000
